--- a/api-deployment.yaml
+++ b/api-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: api
 spec:
-  replicas: 1
+  replicas: 5
   selector:
     matchLabels:
       app: api
@@ -19,3 +19,10 @@ spec:
         image: yrez/ynov-api:latest
         ports:
         - containerPort: 3000
+        env:
+        - name: MONGODB_URI
+          valueFrom:
+            secretKeyRef:
+              name: mongodb-uri
+              key: mongodb-uri
+              optional: false
